[gd_scene load_steps=14 format=2]

[ext_resource path="res://uiscreen/ui_assets/tr-large.tres" type="DynamicFont" id=1]
[ext_resource path="res://uiscreen/ButtonScene.gd" type="Script" id=2]
[ext_resource path="res://uiscreen/ui_assets/turretroad-theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/background.png" type="Texture" id=4]
[ext_resource path="res://assets/runner green.png" type="Texture" id=5]
[ext_resource path="res://assets/runner blue.png" type="Texture" id=6]
[ext_resource path="res://assets/runner yellow.png" type="Texture" id=7]
[ext_resource path="res://uiscreen/SettingNPlayer.gd" type="Script" id=8]
[ext_resource path="res://assets/runner orange.png" type="Texture" id=9]
[ext_resource path="res://assets/arrow guide.png" type="Texture" id=10]
[ext_resource path="res://assets/joycon1 guide.png" type="Texture" id=11]
[ext_resource path="res://assets/asdw guide.png" type="Texture" id=12]
[ext_resource path="res://assets/joycon2 guide.png" type="Texture" id=13]

[node name="SettingNPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 960.798, 532.043 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.5
margin_top = 273.724
margin_right = 180.5
margin_bottom = 339.724
custom_fonts/font = ExtResource( 1 )
text = "Run N Chase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -195.5
margin_top = -146.108
margin_right = 195.5
margin_bottom = -96.1084
size_flags_vertical = 3
text = "START"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
pathS = "res://scenes/SceneNPlayer.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -621.0
margin_top = -168.0
margin_right = 622.0
margin_bottom = 294.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1243.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 205.0
margin_bottom = 229.0
size_flags_horizontal = 11
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource( 12 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 619.0
margin_bottom = 229.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 410.0
margin_bottom = 175.0
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 6

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 410.0
margin_bottom = 229.0
text = "Unlimited Jump"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
pathS = "res://scenes/Scene2Keyboard.tscn"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 623.0
margin_right = 1033.0
margin_bottom = 229.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 410.0
margin_bottom = 175.0
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 6

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 179.0
margin_right = 410.0
margin_bottom = 229.0
text = "Unlimited Jump"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
pathS = "res://scenes/Scene2Keyboard.tscn"

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 1037.0
margin_right = 1243.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource( 10 )
stretch_mode = 6

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 233.0
margin_right = 1243.0
margin_bottom = 462.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 205.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource( 11 )
stretch_mode = 6

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 209.0
margin_right = 619.0
margin_bottom = 229.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer3"]
margin_right = 410.0
margin_bottom = 175.0
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 6

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer3"]
margin_top = 179.0
margin_right = 410.0
margin_bottom = 229.0
text = "Unlimited Jump"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
pathS = "res://scenes/Scene2Keyboard.tscn"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 623.0
margin_right = 1033.0
margin_bottom = 229.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer4"]
margin_right = 410.0
margin_bottom = 175.0
size_flags_vertical = 3
texture = ExtResource( 9 )
stretch_mode = 6

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer4"]
margin_top = 179.0
margin_right = 410.0
margin_bottom = 229.0
text = "Unlimited Jump"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
pathS = "res://scenes/Scene2Keyboard.tscn"

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1037.0
margin_right = 1243.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource( 13 )
stretch_mode = 6
[connection signal="button_up" from="Button" to="." method="_on_start_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Player1_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/VBoxContainer2/Button" to="." method="_on_Player2_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/VBoxContainer3/Button" to="." method="_on_Player3_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/VBoxContainer4/Button" to="." method="_on_Player4_button_up"]
